New song icons & update translations

--- a/game/languages/Català.ini
+++ b/game/languages/Català.ini
@@ -49,6 +49,7 @@ SING_OPTIONS_MICROPHONES=Micròfons
 SING_OPTIONS_ADVANCED=Avançat
 SING_OPTIONS_NETWORK=Internet
 ;TODO: SING_OPTIONS_WEBCAM=Webcam
+;TODO: SING_OPTIONS_PROFILES=Profiles
 SING_OPTIONS_EXIT=Enrere
 
 SING_OPTIONS_GAME_LANGUAGE=Idioma
@@ -253,9 +254,12 @@ JUKEBOX_SONGOPTIONS_LYRIC_COLOR=Color
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_RGB_GREEN=Green
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Blue
 
+;TODO: JUKEBOX_SONGOPTIONS_LYRIC=Lyric Options
+;TODO: JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
+
 OPTION_VALUE_TO_SING=Canta
-OPTION_VALUE_ACTUAL=Superior
-OPTION_VALUE_NEXT=Inferior
+OPTION_VALUE_TOP=Superior
+OPTION_VALUE_BOTTOM=Inferior
 ;TODO: OPTION_VALUE_OTHER=Other
 ;TODO: OPTION_VALUE_FILL=Fill
 ;TODO: OPTION_VALUE_OUTLINE=Outline
@@ -307,6 +311,7 @@ SING_SONG_SELECTION_LEGEND_DUET=Duo
 ;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
 ;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
 ;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
+;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Total
 SING_MODE=Cantar sol
@@ -584,7 +589,7 @@ DEVELOPERS_TITLE=Desenvolupat per
 DEVELOPERS_OVERVIEW=Persones que han contribuït a aquest projecte:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Visiteu-nos per obtenir més informació.\n\nhttps://ultrastar-es.org
 
 SCREENSHOT_SAVED=S'ha desat la captura de pantalla
-;TODO: SCREENSHOT_FAILED=Couldn''t save screenshot
+;TODO: SCREENSHOT_FAILED=Couldn't save screenshot
 
 MSG_ERROR_TITLE=Error
 ;TODO: MSG_INFO_TITLE=Information
