--- a/game/languages/Dansk.ini
+++ b/game/languages/Dansk.ini
@@ -49,6 +49,7 @@ SING_OPTIONS_MICROPHONES=Optag
 SING_OPTIONS_ADVANCED=Advanceret
 ;TODO: SING_OPTIONS_NETWORK=Internet
 ;TODO: SING_OPTIONS_WEBCAM=Webcam
+;TODO: SING_OPTIONS_PROFILES=Profiles
 SING_OPTIONS_EXIT=Tilbage
 
 SING_OPTIONS_GAME_LANGUAGE=Sprog
@@ -118,9 +119,9 @@ SING_OPTIONS_LYRICS_FONT=Tekst Type
 SING_OPTIONS_LYRICS_EFFECT=Effekt
 ;TODO: SING_OPTIONS_LYRICS_NOTELINES=Staves
 
-;TODO: OPTION_VALUE_PLAIN=stylized
-;TODO: OPTION_VALUE_OLINE1=with thin edge
-;TODO: OPTION_VALUE_OLINE2=with thick edge
+;TODO: OPTION_VALUE_PLAIN=Stylized
+;TODO: OPTION_VALUE_OLINE1=With thin edge
+;TODO: OPTION_VALUE_OLINE2=With thick edge
 
 ;TODO: OPTION_VALUE_SIMPLE=Simple
 ;TODO: OPTION_VALUE_ZOOM=Zoom
@@ -143,8 +144,8 @@ SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloskop
 SING_OPTIONS_ADVANCED_ONSONGCLICK=Efter sang valg
 SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Savety Questions
 SING_OPTIONS_ADVANCED_PARTYPOPUP=Auto Festmodus
-;TODO: SING_OPTIONS_ADVANCED_SINGSCORES=Scores on Singing
 ;TODO: SING_OPTIONS_ADVANCED_TOPSCORES=Top Scores
+;TODO: SING_OPTIONS_ADVANCED_SINGSCORES=Scores on Singing
 
 OPTION_VALUE_ALL=Alle
 ;TODO: OPTION_VALUE_PLAYER=Player
@@ -257,8 +258,8 @@ JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Blå
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
 
 OPTION_VALUE_TO_SING=Syng
-OPTION_VALUE_ACTUAL=Øverst
-OPTION_VALUE_NEXT=Bund
+OPTION_VALUE_TOP=Øverst
+OPTION_VALUE_BOTTOM=Bund
 OPTION_VALUE_OTHER=Andet
 ;TODO: OPTION_VALUE_FILL=Fill
 ;TODO: OPTION_VALUE_OUTLINE=Outline
@@ -310,6 +311,7 @@ SING_SONG_SELECTION_LEGEND_DUET=Duet
 ;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
 ;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
 ;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
+;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Total
 SING_MODE=Syng Solo
@@ -587,7 +589,7 @@ DEVELOPERS_TITLE=Udviklet af
 DEVELOPERS_OVERVIEW=Folk der har bidraget til dette projekt:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Besøg os for mere information.\n\nhttps://ultrastar-es.org
 
 ;TODO: SCREENSHOT_SAVED=Screenshot saved
-;TODO: SCREENSHOT_FAILED=Couldn''t save screenshot
+;TODO: SCREENSHOT_FAILED=Couldn't save screenshot
 
 MSG_ERROR_TITLE=Fejl
 ;TODO: MSG_INFO_TITLE=Information
