--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -49,6 +49,7 @@ SING_OPTIONS_MICROPHONES=Mikrofone
 SING_OPTIONS_ADVANCED=Erweitert
 SING_OPTIONS_NETWORK=Internet
 SING_OPTIONS_WEBCAM=Webcam
+;TODO: SING_OPTIONS_PROFILES=Profiles
 SING_OPTIONS_EXIT=Zurück
 
 SING_OPTIONS_GAME_LANGUAGE=Sprache
@@ -257,8 +258,8 @@ JUKEBOX_SONGOPTIONS_LYRIC=Lyricsoptionen
 JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
 
 OPTION_VALUE_TO_SING=Singen
-OPTION_VALUE_ACTUAL=Aktuelle
-OPTION_VALUE_NEXT=Nächste
+;TODO: OPTION_VALUE_TOP=Top
+;TODO: OPTION_VALUE_BOTTOM=Bottom
 OPTION_VALUE_OTHER=Other
 OPTION_VALUE_FILL=Füllung
 OPTION_VALUE_OUTLINE=Umriss
@@ -310,6 +311,7 @@ SING_SONG_SELECTION_LEGEND_DUET=Duett
 ;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
 ;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
 ;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
+;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Gesamt
 SING_MODE=Singmodus
@@ -472,20 +474,20 @@ MODE_BLIND_DESC=Eins-gegen-Eins mit versteckten Noten
 MODE_BLINDTOTAL_NAME=Totale Blindheit
 MODE_BLINDTOTAL_DESC=Kannst du's schaffen? Ohne Noten, ohne Text? Los geht's!
 
-MODE_1000BLIND_NAME =+1000 blind
-MODE_1000BLIND_DESC =Erreiche einen Vorsprung von über 1000 Punkten, ohne dabei die Noten zu sehen!
+MODE_1000BLIND_NAME=+1000 blind
+MODE_1000BLIND_DESC=Erreiche einen Vorsprung von über 1000 Punkten, ohne dabei die Noten zu sehen!
 
-MODE_DEAF_NAME =Taub
-MODE_DEAF_DESC =Denkst, du kannst singen? Versuch's ohne Begleitung der Noten!
+MODE_DEAF_NAME=Taub
+MODE_DEAF_DESC=Denkst, du kannst singen? Versuch's ohne Begleitung der Noten!
 
-MODE_BLINDLYRICS_NAME =Ohne Text
-MODE_BLINDLYRICS_DESC =Denkst, kennst jeden Song? Versuch's mal ohne Text!
+MODE_BLINDLYRICS_NAME=Ohne Text
+MODE_BLINDLYRICS_DESC=Denkst, kennst jeden Song? Versuch's mal ohne Text!
 
-MODE_500BLIND_NAME =+500 Blind
-MODE_500BLIND_DESC =Erreiche einen Vorsprung von über 500 Punkten, ohne dabei die Noten zu sehen!
+MODE_500BLIND_NAME=+500 Blind
+MODE_500BLIND_DESC=Erreiche einen Vorsprung von über 500 Punkten, ohne dabei die Noten zu sehen!
 
-MODE_SHORTSONG_NAME =Kurzes Lied
-MODE_SHORTSONG_DESC =Schnelles kurzes Duell 1-gegen-1!
+MODE_SHORTSONG_NAME=Kurzes Lied
+MODE_SHORTSONG_DESC=Schnelles kurzes Duell 1-gegen-1!
 
 MODE_HARDCORE_NAME=Hardcore
 MODE_HARDCORE_DESC=Umkämpfe eine Führung über 3 Phrasen hinweg und siege!
