--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -258,8 +258,8 @@ JUKEBOX_SONGOPTIONS_LYRIC=Lyric Options
 JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
 
 OPTION_VALUE_TO_SING=Sing
-OPTION_VALUE_ACTUAL=Actual
-OPTION_VALUE_NEXT=Next
+OPTION_VALUE_TOP=Top
+OPTION_VALUE_BOTTOM=Bottom
 OPTION_VALUE_OTHER=Other
 OPTION_VALUE_FILL=Fill
 OPTION_VALUE_OUTLINE=Outline
@@ -311,6 +311,7 @@ SING_SONG_SELECTION_LEGEND_DUET=Duet
 SING_SONG_SELECTION_LEGEND_RAP=Rap
 SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
 SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
+SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Total
 SING_MODE=Sing solo
