--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -49,6 +49,7 @@ SING_OPTIONS_MICROPHONES=Micrófonos
 SING_OPTIONS_ADVANCED=Avanzado
 SING_OPTIONS_NETWORK=Internet
 SING_OPTIONS_WEBCAM=Webcam
+SING_OPTIONS_PROFILES=Perfiles
 SING_OPTIONS_EXIT=Atrás
 
 SING_OPTIONS_GAME_LANGUAGE=Idioma
@@ -257,8 +258,8 @@ JUKEBOX_SONGOPTIONS_LYRIC=Opciones de letra
 JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Posición
 
 OPTION_VALUE_TO_SING=Canta
-OPTION_VALUE_ACTUAL=Superior
-OPTION_VALUE_NEXT=Inferior
+OPTION_VALUE_TOP=Superior
+OPTION_VALUE_BOTTOM=Inferior
 OPTION_VALUE_OTHER=Otro
 OPTION_VALUE_FILL=Relleno
 OPTION_VALUE_OUTLINE=Borde
@@ -310,6 +311,7 @@ SING_SONG_SELECTION_LEGEND_DUET=Dueto
 SING_SONG_SELECTION_LEGEND_RAP=Rap
 SING_SONG_SELECTION_LEGEND_CREATEDBY=Creada por
 SING_SONG_SELECTION_LEGEND_FIXEDBY=Reparada por
+SING_SONG_SELECTION_LEGEND_INVALIDATED=No validada
 
 SING_TOTAL=Total
 SING_MODE=Canta solo o acompañado
@@ -472,20 +474,20 @@ MODE_BLIND_DESC=Duelo sin ver las notas.
 MODE_BLINDTOTAL_NAME=Todo a ciegas
 MODE_BLINDTOTAL_DESC=Duelo con notas y letras ocultas
 
-MODE_1000BLIND_NAME = +1000 Ciego
-MODE_1000BLIND_DESC = Si vas ganando por más de 1000 puntos, no verás las notas
+MODE_1000BLIND_NAME= +1000 Ciego
+MODE_1000BLIND_DESC= Si vas ganando por más de 1000 puntos, no verás las notas
 
-MODE_DEAF_NAME = Sordo
-MODE_DEAF_DESC = Atrévete a cantar sin música
+MODE_DEAF_NAME= Sordo
+MODE_DEAF_DESC= Atrévete a cantar sin música
 
-MODE_BLINDLYRICS_NAME = Sin letra
-MODE_BLINDLYRICS_DESC = Para aquellos que se saben la letra de memoria.
+MODE_BLINDLYRICS_NAME= Sin letra
+MODE_BLINDLYRICS_DESC= Para aquellos que se saben la letra de memoria.
 
-MODE_500BLIND_NAME = +500 Ciego
-MODE_500BLIND_DESC = Si vas ganando por más de 500 puntos, no verás las notas
+MODE_500BLIND_NAME= +500 Ciego
+MODE_500BLIND_DESC= Si vas ganando por más de 500 puntos, no verás las notas
 
-MODE_SHORTSONG_NAME = Canción corta
-MODE_SHORTSONG_DESC = Duelo hasta la mitad de la canción
+MODE_SHORTSONG_NAME= Canción corta
+MODE_SHORTSONG_DESC= Duelo hasta la mitad de la canción
 
 MODE_HARDCORE_NAME=Extremo
 MODE_HARDCORE_DESC=Gana quien consiga 3 líneas de ventaja
@@ -548,14 +550,14 @@ JUKEBOX_SORT=Ordenar:
 JUKEBOX_SONGLIST=Lista de canciones
 
 SONG_MENU_SONG=Canción
-SONG_MENU_MEDLEY=Medley
+SONG_MENU_MEDLEY=Versión corta
 
 SONG_MENU_NAME_SONG=Menu Canción
-SONG_MENU_NAME_MEDLEY=Menu Medley
+SONG_MENU_NAME_MEDLEY=Versión corta
 SONG_MENU_ADD_SONG=Añadir canción
 SONG_MENU_DELETE_SONG=Eliminar canción
 SONG_MENU_START_MEDLEY=Cantar
-SONG_MENU_START_5_MEDLEY=Cantar %0:d canciones
+SONG_MENU_START_5_MEDLEY=Cantar %0:d canciones al azar
 
 SONG_MENU_NAME_SORTING=Menu ordenar
 SONG_MENU_SORTING_APPLY=Aplicar
