--- a/game/languages/Euskara.ini
+++ b/game/languages/Euskara.ini
@@ -49,6 +49,7 @@ SING_OPTIONS_MICROPHONES=Grabazioa
 SING_OPTIONS_ADVANCED=Aurreratuak
 ;TODO: SING_OPTIONS_NETWORK=Internet
 ;TODO: SING_OPTIONS_WEBCAM=Webcam
+;TODO: SING_OPTIONS_PROFILES=Profiles
 SING_OPTIONS_EXIT=Itzuli
 
 SING_OPTIONS_GAME_LANGUAGE=Hizkuntza
@@ -57,7 +58,7 @@ SING_OPTIONS_GAME_SONGMENU=Menua
 SING_OPTIONS_GAME_TABS=Etiketak
 SING_OPTIONS_GAME_SORTING=Sailkapena
 ;TODO: SING_OPTIONS_GAME_SHOWSCORES=Show Scores
-;TODO: SING_OPTIONS_GAME_JOYPAD_SUPPORT=Controller support
+;TODO: SING_OPTIONS_GAME_JOYPAD_SUPPORT=Activate gamepad
 
 ;TODO: OPTION_VALUE_ROULETTE=Roulette
 ;TODO: OPTION_VALUE_CHESSBOARD=Chessboard
@@ -118,9 +119,9 @@ SING_OPTIONS_LYRICS_FONT=Letra-mota
 SING_OPTIONS_LYRICS_EFFECT=Efektua
 SING_OPTIONS_LYRICS_NOTELINES=Pentagramak
 
-;TODO: OPTION_VALUE_PLAIN=stylized
-;TODO: OPTION_VALUE_OLINE1=with thin edge
-;TODO: OPTION_VALUE_OLINE2=with thick edge
+;TODO: OPTION_VALUE_PLAIN=Stylized
+;TODO: OPTION_VALUE_OLINE1=With thin edge
+;TODO: OPTION_VALUE_OLINE2=With thick edge
 
 OPTION_VALUE_SIMPLE=Arrunta
 OPTION_VALUE_ZOOM=Zoom-a
@@ -140,8 +141,8 @@ SING_OPTIONS_MICROPHONES_MIC_BOOST=Mikrofonoa indartu
 
 ;TODO: SING_OPTIONS_ADVANCED_DEBUG=Debug
 ;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloscope
-SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Ziurtasun galderak
 SING_OPTIONS_ADVANCED_ONSONGCLICK=Aukeratu ondoren
+SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Ziurtasun galderak
 SING_OPTIONS_ADVANCED_PARTYPOPUP=Talde menu auto
 ;TODO: SING_OPTIONS_ADVANCED_TOPSCORES=Top Scores
 ;TODO: SING_OPTIONS_ADVANCED_SINGSCORES=Scores on Singing
@@ -257,8 +258,8 @@ JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Urdina
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
 
 OPTION_VALUE_TO_SING=Abestu
-;TODO: OPTION_VALUE_ACTUAL=Actual
-;TODO: OPTION_VALUE_NEXT=Next
+;TODO: OPTION_VALUE_TOP=Top
+;TODO: OPTION_VALUE_BOTTOM=Bottom
 ;TODO: OPTION_VALUE_OTHER=Other
 ;TODO: OPTION_VALUE_FILL=Fill
 ;TODO: OPTION_VALUE_OUTLINE=Outline
@@ -310,6 +311,7 @@ PLAYLIST_CATTEXT=Zerrenda: %s
 ;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
 ;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
 ;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
+;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Guztira
 SING_MODE=Bakarka abestu
