--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -49,6 +49,7 @@ SING_OPTIONS_MICROPHONES=Micros
 SING_OPTIONS_ADVANCED=Avancé
 SING_OPTIONS_NETWORK=Internet
 SING_OPTIONS_WEBCAM=Caméra
+SING_OPTIONS_PROFILES=Profils
 SING_OPTIONS_EXIT=Retour
 
 SING_OPTIONS_GAME_LANGUAGE=Langue
@@ -143,8 +144,8 @@ SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloscope
 SING_OPTIONS_ADVANCED_ONSONGCLICK=Choix ap. chanson
 SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Demander avant de quitter
 SING_OPTIONS_ADVANCED_PARTYPOPUP=Menu fête auto
-SING_OPTIONS_ADVANCED_SINGSCORES=Scores sur le chant
 SING_OPTIONS_ADVANCED_TOPSCORES=Top Scores
+SING_OPTIONS_ADVANCED_SINGSCORES=Scores sur le chant
 
 OPTION_VALUE_ALL=Tout
 OPTION_VALUE_PLAYER=Joueur
@@ -203,7 +204,6 @@ SONG_MENU_REFRESH_SCORES_REFRESH=Mettre à jour
 SONG_MENU_REFRESH_SCORES_ERROR_CONNECTION=Erreur de connexion au site : %0:s!
 SONG_MENU_REFRESH_SCORES_ERROR_FILE=Fichier absent : '%0:s [Téléchargement des scores]'!
 
-
 SONG_SCORE_MAX=Meilleur :
 SONG_SCORE_MEDIA=Moyenne :
 
@@ -258,8 +258,8 @@ JUKEBOX_SONGOPTIONS_LYRIC=Options des paroles
 JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
 
 OPTION_VALUE_TO_SING=Chantée
-OPTION_VALUE_ACTUAL=Supérieure
-OPTION_VALUE_NEXT=Inférieure
+OPTION_VALUE_TOP=Supérieure
+OPTION_VALUE_BOTTOM=Inférieure
 OPTION_VALUE_OTHER=Autre
 OPTION_VALUE_FILL=Rempli
 OPTION_VALUE_OUTLINE=Bord
@@ -311,6 +311,7 @@ SING_SONG_SELECTION_LEGEND_DUET=Duo
 SING_SONG_SELECTION_LEGEND_RAP=Rap
 SING_SONG_SELECTION_LEGEND_CREATEDBY=Créée par
 SING_SONG_SELECTION_LEGEND_FIXEDBY=Réparée par
+SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidée
 
 SING_TOTAL=Total
 SING_MODE=Mode chanter
@@ -473,20 +474,20 @@ MODE_BLIND_DESC=un duel à un contre un, mais sans les notes !
 MODE_BLINDTOTAL_NAME=Noir total !
 MODE_BLINDTOTAL_DESC=Un duel sans notes ni paroles. Seulement pour les courageux !
 
-MODE_1000BLIND_NAME = +1000 à l'aveugle
-MODE_1000BLIND_DESC = Gagnez 1000 points de plus, mais sans voir les notes !
+MODE_1000BLIND_NAME= +1000 à l'aveugle
+MODE_1000BLIND_DESC= Gagnez 1000 points de plus, mais sans voir les notes !
 
-MODE_DEAF_NAME = Silencieux
-MODE_DEAF_DESC = Vou pensez connaitre la mélodie ? Pouvez vous chantez sans l'accompagnement ?
+MODE_DEAF_NAME= Silencieux
+MODE_DEAF_DESC= Vou pensez connaitre la mélodie ? Pouvez vous chantez sans l'accompagnement ?
 
-MODE_BLINDLYRICS_NAME = Sans paroles
-MODE_BLINDLYRICS_DESC = Vous connaissez les paroles ? Chantez sans les voir !
+MODE_BLINDLYRICS_NAME= Sans paroles
+MODE_BLINDLYRICS_DESC= Vous connaissez les paroles ? Chantez sans les voir !
 
-MODE_500BLIND_NAME = +500 à l'aveugle
-MODE_500BLIND_DESC = Gagnez 500 points de plus, mais sans voir les notes !
+MODE_500BLIND_NAME= +500 à l'aveugle
+MODE_500BLIND_DESC= Gagnez 500 points de plus, mais sans voir les notes !
 
-MODE_SHORTSONG_NAME = Chanson raccourcie
-MODE_SHORTSONG_DESC = Un duel rapide sur la moitié d'une chanson !
+MODE_SHORTSONG_NAME= Chanson raccourcie
+MODE_SHORTSONG_DESC= Un duel rapide sur la moitié d'une chanson !
 
 MODE_HARDCORE_NAME=Hardcore
 MODE_HARDCORE_DESC=Gagnez trois lignes d'avance sur votre adversaire !
