--- a/game/languages/Gàidhlig.ini
+++ b/game/languages/Gàidhlig.ini
@@ -49,6 +49,7 @@ SING_OPTIONS_MICROPHONES=Clàradh
 SING_OPTIONS_ADVANCED=Adhartach
 SING_OPTIONS_NETWORK=Eadar-lìon
 SING_OPTIONS_WEBCAM=Camara-lìn
+;TODO: SING_OPTIONS_PROFILES=Profiles
 SING_OPTIONS_EXIT=Air ais
 
 SING_OPTIONS_GAME_LANGUAGE=Cànan
@@ -118,9 +119,9 @@ SING_OPTIONS_LYRICS_FONT=Cruth-clò
 SING_OPTIONS_LYRICS_EFFECT=Èifeachd
 SING_OPTIONS_LYRICS_NOTELINES=Clàran
 
-;TODO: OPTION_VALUE_PLAIN=stylized
-;TODO: OPTION_VALUE_OLINE1=with thin edge
-;TODO: OPTION_VALUE_OLINE2=with thick edge
+;TODO: OPTION_VALUE_PLAIN=Stylized
+;TODO: OPTION_VALUE_OLINE1=With thin edge
+;TODO: OPTION_VALUE_OLINE2=With thick edge
 
 OPTION_VALUE_SIMPLE=Simplidh
 OPTION_VALUE_ZOOM=Sùm
@@ -140,8 +141,8 @@ SING_OPTIONS_MICROPHONES_MIC_BOOST=Meudachadh a’ mhic
 
 SING_OPTIONS_ADVANCED_DEBUG=Dì-bhugachadh
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloscope
-SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Ceistean dìonaidh
 SING_OPTIONS_ADVANCED_ONSONGCLICK=Às dèidh òrain tagh
+SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Ceistean dìonaidh
 SING_OPTIONS_ADVANCED_PARTYPOPUP=Fèin-chlàr-cèilidh
 SING_OPTIONS_ADVANCED_TOPSCORES=Na sgòran as àirde
 SING_OPTIONS_ADVANCED_SINGSCORES=Sgòran seinn
@@ -257,8 +258,8 @@ JUKEBOX_SONGOPTIONS_LYRIC=Roghainnean nam faclan
 JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Suidheachadh
 
 OPTION_VALUE_TO_SING=Seinn
-OPTION_VALUE_ACTUAL=Ann an da-rìribh
-OPTION_VALUE_NEXT=Air adhart
+;TODO: OPTION_VALUE_TOP=Top
+;TODO: OPTION_VALUE_BOTTOM=Bottom
 OPTION_VALUE_OTHER=Eile
 OPTION_VALUE_FILL=Lìon
 OPTION_VALUE_OUTLINE=Oir-loidhne
@@ -310,6 +311,7 @@ SING_SONG_SELECTION_LEGEND_DUET=Duet
 ;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
 ;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
 ;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
+;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Iomlan
 SING_MODE=Seinn ’nad aonar
@@ -472,20 +474,20 @@ MODE_BLIND_DESC=Còmhrag-dhithis leis na pongan ’gam falach!
 MODE_BLINDTOTAL_NAME=Dubh-dorchadas!
 MODE_BLINDTOTAL_DESC=Còmhrag-dhithis le pongan is faclan falaichte. Dha ghaisgich a-mhàin!
 
-MODE_1000BLIND_NAME = +1,000 gu dall
-MODE_1000BLIND_DESC =Bidh air thoiseach air càch le corr is 1,000 puing ach gun a bhith a’ faicinn nam pong!
+MODE_1000BLIND_NAME= +1,000 gu dall
+MODE_1000BLIND_DESC=Bidh air thoiseach air càch le corr is 1,000 puing ach gun a bhith a’ faicinn nam pong!
 
-MODE_DEAF_NAME =Bodhar
-MODE_DEAF_DESC =Saoil a bheil thu eòlach air na pongan? An seinn thu às aonais taic-ciùil?
+MODE_DEAF_NAME=Bodhar
+MODE_DEAF_DESC=Saoil a bheil thu eòlach air na pongan? An seinn thu às aonais taic-ciùil?
 
-MODE_BLINDLYRICS_NAME =Gun fhaclan
-MODE_BLINDLYRICS_DESC =Saoil a bheil thu eòlach air na faclan? Seinn às aonais nam faclan sgrìobhte!
+MODE_BLINDLYRICS_NAME=Gun fhaclan
+MODE_BLINDLYRICS_DESC=Saoil a bheil thu eòlach air na faclan? Seinn às aonais nam faclan sgrìobhte!
 
-MODE_500BLIND_NAME = +500 gu dall
-MODE_500BLIND_DESC =Bidh air thoiseach air càch le corr is 500 puing ach gun a bhith a’ faicinn nam pong!
+MODE_500BLIND_NAME= +500 gu dall
+MODE_500BLIND_DESC=Bidh air thoiseach air càch le corr is 500 puing ach gun a bhith a’ faicinn nam pong!
 
-MODE_SHORTSONG_NAME =Òran goirid
-MODE_SHORTSONG_DESC =Còmhrag-dhithis luath thar leth-òran!
+MODE_SHORTSONG_NAME=Òran goirid
+MODE_SHORTSONG_DESC=Còmhrag-dhithis luath thar leth-òran!
 
 MODE_HARDCORE_NAME=Gaisgich
 MODE_HARDCORE_DESC=Strì airsona bhith trì loidhnichean air thoiseach a’ cho-fharpaisich!
