--- a/game/languages/Italiano.ini
+++ b/game/languages/Italiano.ini
@@ -49,6 +49,7 @@ SING_OPTIONS_MICROPHONES=Microfono
 SING_OPTIONS_ADVANCED=Avanzate
 SING_OPTIONS_NETWORK=Internet
 SING_OPTIONS_WEBCAM=Webcam
+;TODO: SING_OPTIONS_PROFILES=Profiles
 SING_OPTIONS_EXIT=Indietro
 
 SING_OPTIONS_GAME_LANGUAGE=Lingua
@@ -257,8 +258,8 @@ JUKEBOX_SONGOPTIONS_LYRIC=Opzioni testo
 JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Posizione
 
 OPTION_VALUE_TO_SING=Inizia la sfida!
-OPTION_VALUE_ACTUAL=Attuale
-OPTION_VALUE_NEXT=Seguente
+OPTION_VALUE_TOP=Superiore
+OPTION_VALUE_BOTTOM=Inferiore
 OPTION_VALUE_OTHER=Altro
 OPTION_VALUE_FILL=Riempire
 OPTION_VALUE_OUTLINE=Contorno
@@ -299,8 +300,8 @@ SING_LEGEND_ESC=Indietro
 SING_SONG_SELECTION=Brano
 SING_SONG_SELECTION_MENU=Menu
 SING_SONG_SELECTION_PLAYLIST=Playlist
+;TODO: SING_SONG_IN_CAT=Song
 SING_SONGS_IN_CAT=Canzone
-SING_SONGS_IN_CAT=Canzoni
 PLAYLIST_CATTEXT=Playlist: %s
 SING_SONG_SELECTION_LEGEND_TITLE=Leggenda
 SING_SONG_SELECTION_LEGEND_VIDEO=Video
@@ -310,6 +311,7 @@ SING_SONG_SELECTION_LEGEND_DUET=Duetto
 SING_SONG_SELECTION_LEGEND_RAP=Rap
 SING_SONG_SELECTION_LEGEND_CREATEDBY=Creata da
 SING_SONG_SELECTION_LEGEND_FIXEDBY=Riparata da
+SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidata
 
 SING_TOTAL=Punteggio
 SING_MODE=Canta
@@ -472,20 +474,20 @@ MODE_BLIND_DESC=Duello 1vs1 con le note nascoste!
 MODE_BLINDTOTAL_NAME=Oscurità totale!
 MODE_BLINDTOTAL_DESC=Duello con le note e testo nascosto. Solo per i più coraggiosi.
 
-MODE_1000BLIND_NAME =+1000 cieco
-MODE_1000BLIND_DESC =Ottieni un vantaggio di più di 1000 punti, ma senza vedere le note!
+MODE_1000BLIND_NAME=+1000 cieco
+MODE_1000BLIND_DESC=Ottieni un vantaggio di più di 1000 punti, ma senza vedere le note!
 
-MODE_DEAF_NAME =Sordo
-MODE_DEAF_DESC = Credi di conoscere le note? Puoi cantare senza accompagnamenti?
+MODE_DEAF_NAME=Sordo
+MODE_DEAF_DESC= Credi di conoscere le note? Puoi cantare senza accompagnamenti?
 
-MODE_BLINDLYRICS_NAME =Senza testo
-MODE_BLINDLYRICS_DESC =Credi di conoscere il testo? Canta con il testo nascosto!
+MODE_BLINDLYRICS_NAME=Senza testo
+MODE_BLINDLYRICS_DESC=Credi di conoscere il testo? Canta con il testo nascosto!
 
-MODE_500BLIND_NAME =+500 cieco
-MODE_500BLIND_DESC =Ottieni un vantaggio di più di 500 punti senza vedere le note!
+MODE_500BLIND_NAME=+500 cieco
+MODE_500BLIND_DESC=Ottieni un vantaggio di più di 500 punti senza vedere le note!
 
-MODE_SHORTSONG_NAME =Canzone corta
-MODE_SHORTSONG_DESC =Duello 1vs1 fino metà canzone!
+MODE_SHORTSONG_NAME=Canzone corta
+MODE_SHORTSONG_DESC=Duello 1vs1 fino metà canzone!
 
 MODE_HARDCORE_NAME=Hardcore
 MODE_HARDCORE_DESC=Vince chi ottenga 3 linee di vantaggio!
