--- a/game/languages/Lietuvių.ini
+++ b/game/languages/Lietuvių.ini
@@ -49,6 +49,7 @@ SING_OPTIONS_MICROPHONES=Įrašyti
 SING_OPTIONS_ADVANCED=Išplėstinė
 SING_OPTIONS_NETWORK=Internetas
 ;TODO: SING_OPTIONS_WEBCAM=Webcam
+;TODO: SING_OPTIONS_PROFILES=Profiles
 SING_OPTIONS_EXIT=Atgal
 
 SING_OPTIONS_GAME_LANGUAGE=Kalba
@@ -140,7 +141,7 @@ SING_OPTIONS_MICROPHONES_MIC_BOOST=Mikrobangų krosnelė
 
 SING_OPTIONS_ADVANCED_DEBUG=Derinti
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Osciloskopas
-;TODO: SING_OPTIONS_ADVANCED_ONSONGCLICK=After song select
+;TODO: SING_OPTIONS_ADVANCED_ONSONGCLICK=After Song Select
 SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Saugos klausimai
 ;TODO: SING_OPTIONS_ADVANCED_PARTYPOPUP=Auto PartyMenu
 SING_OPTIONS_ADVANCED_TOPSCORES=Geriausi rezultatai
@@ -257,8 +258,8 @@ JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Mėlyna
 JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Pozicija
 
 ;TODO: OPTION_VALUE_TO_SING=Sing
-OPTION_VALUE_ACTUAL=Viršutinė
-OPTION_VALUE_NEXT=Apatinė
+OPTION_VALUE_TOP=Viršutinė
+OPTION_VALUE_BOTTOM=Apatinė
 ;TODO: OPTION_VALUE_OTHER=Other
 ;TODO: OPTION_VALUE_FILL=Fill
 ;TODO: OPTION_VALUE_OUTLINE=Outline
@@ -305,11 +306,12 @@ PLAYLIST_CATTEXT=Grojaraštis: %s
 SING_SONG_SELECTION_LEGEND_TITLE=Legenda
 SING_SONG_SELECTION_LEGEND_VIDEO=Vaizdo įrašas
 ;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=medley calculated
+;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
 SING_SONG_SELECTION_LEGEND_DUET=Duetas
 ;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
 ;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
 ;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
+;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Iš viso
 SING_MODE=Dainuoti solo
@@ -472,16 +474,16 @@ MODE_BLIND_NAME=Aklųjų režimas
 ;TODO: MODE_BLINDTOTAL_NAME=Total Darkness!
 ;TODO: MODE_BLINDTOTAL_DESC=A duel, but with the notes and the lyrics hidden. Only for the brave!
 
-MODE_1000BLIND_NAME = +1000 Aklas
+MODE_1000BLIND_NAME= +1000 Aklas
 ;TODO: MODE_1000BLIND_DESC = Gain a lead of more than 1000 points, but without seeing the notes!
 
 ;TODO: MODE_DEAF_NAME = Deaf
 ;TODO: MODE_DEAF_DESC = Think you know the notes? Can you sing it without the acompaniment?
 
-MODE_BLINDLYRICS_NAME = Nėra dainų
+MODE_BLINDLYRICS_NAME= Nėra dainų
 ;TODO: MODE_BLINDLYRICS_DESC = Think you know all the lyrics? Sing with the lyrics hidden!
 
-MODE_500BLIND_NAME = +500 Aklas
+MODE_500BLIND_NAME= +500 Aklas
 ;TODO: MODE_500BLIND_DESC = Gain a lead of more than 500 points, but without seeing the notes!
 
 ;TODO: MODE_SHORTSONG_NAME = Short Song
@@ -587,7 +589,7 @@ DEVELOPERS_TITLE=Sukurta
 DEVELOPERS_OVERVIEW=Žmonės, prisidėję prie šio projekto:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Visit us for more information.\n\nhttps://ultrastar-es.org
 
 ;TODO: SCREENSHOT_SAVED=Screenshot saved
-;TODO: SCREENSHOT_FAILED=Couldn''t save screenshot
+;TODO: SCREENSHOT_FAILED=Couldn't save screenshot
 
 MSG_ERROR_TITLE=Klaida
 ;TODO: MSG_INFO_TITLE=Information
