--- a/game/languages/Magyar.ini
+++ b/game/languages/Magyar.ini
@@ -49,6 +49,7 @@ SING_OPTIONS_MICROPHONES=Mikrofonok
 SING_OPTIONS_ADVANCED=Haladó
 SING_OPTIONS_NETWORK=Internet
 SING_OPTIONS_WEBCAM=Webkamera
+;TODO: SING_OPTIONS_PROFILES=Profiles
 SING_OPTIONS_EXIT=Vissza
 
 SING_OPTIONS_GAME_LANGUAGE=Nyelv
@@ -257,8 +258,8 @@ JUKEBOX_SONGOPTIONS_LYRIC=Dalszöveg beállítások
 JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Pozíció
 
 OPTION_VALUE_TO_SING=Énekelt szöveg
-OPTION_VALUE_ACTUAL=Aktuális sor
-OPTION_VALUE_NEXT=Következő sor
+;TODO: OPTION_VALUE_TOP=Top
+;TODO: OPTION_VALUE_BOTTOM=Bottom
 OPTION_VALUE_OTHER=Egyéb
 OPTION_VALUE_FILL=Egyszerű
 OPTION_VALUE_OUTLINE=Körvonal
@@ -310,6 +311,7 @@ SING_SONG_SELECTION_LEGEND_DUET=Duett
 ;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
 ;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
 ;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
+;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Összesen
 SING_MODE=Egyszeri játékos
@@ -425,7 +427,7 @@ PARTY_WIN_LEGEND_CONTINUE=Vissza a főmenübe
 
 PARTY_ROUND=Forduló
 PARTY_ROUND_WINNER=Nyertes
-PARTY_NOTPLAYEDYET=
+;TODO: PARTY_NOTPLAYEDYET=Not played yet
 PARTY_NOBODY=Senki
 NEXT_ROUND=Következő menet:
 
@@ -472,20 +474,20 @@ MODE_BLIND_DESC=Egymás elleni párbaj, anélkül hogy látnád a hangokat!
 MODE_BLINDTOTAL_NAME=Teljes vakság!
 MODE_BLINDTOTAL_DESC=Párbaj ahol a hangok és a szöveg is rejtve marad. Csak bátraknak!
 
-MODE_1000BLIND_NAME = +1000 pont vakon
-MODE_1000BLIND_DESC = Gyűjts minimum 1000 pont előnyt, annélkül hogy látnád a hangokat!
+MODE_1000BLIND_NAME= +1000 pont vakon
+MODE_1000BLIND_DESC= Gyűjts minimum 1000 pont előnyt, annélkül hogy látnád a hangokat!
 
-MODE_DEAF_NAME = Hang nélkül
-MODE_DEAF_DESC = Azt hiszed ismered a hangokat? Akkor énekelj nélkülük!
+MODE_DEAF_NAME= Hang nélkül
+MODE_DEAF_DESC= Azt hiszed ismered a hangokat? Akkor énekelj nélkülük!
 
-MODE_BLINDLYRICS_NAME = Dalszöveg nélkül
-MODE_BLINDLYRICS_DESC = Ismered a dalszöveget? Énekeld el úgy hogy rejtve marad!
+MODE_BLINDLYRICS_NAME= Dalszöveg nélkül
+MODE_BLINDLYRICS_DESC= Ismered a dalszöveget? Énekeld el úgy hogy rejtve marad!
 
-MODE_500BLIND_NAME = +500 pont vakon
-MODE_500BLIND_DESC = Gyűjts minimum 500 pont előnyt, annélkül hogy látnád a hangokat!
+MODE_500BLIND_NAME= +500 pont vakon
+MODE_500BLIND_DESC= Gyűjts minimum 500 pont előnyt, annélkül hogy látnád a hangokat!
 
-MODE_SHORTSONG_NAME = Rövid dal
-MODE_SHORTSONG_DESC = Gyors menet a dal feléig!
+MODE_SHORTSONG_NAME= Rövid dal
+MODE_SHORTSONG_DESC= Gyors menet a dal feléig!
 
 MODE_HARDCORE_NAME=Háromsoros
 MODE_HARDCORE_DESC=Három sornyi előny és tiéd a győzelem!
