--- a/game/languages/Nederlands.ini
+++ b/game/languages/Nederlands.ini
@@ -49,6 +49,7 @@ SING_OPTIONS_MICROPHONES=Opname
 SING_OPTIONS_ADVANCED=Geavanceerd
 SING_OPTIONS_NETWORK=Internet
 ;TODO: SING_OPTIONS_WEBCAM=Webcam
+;TODO: SING_OPTIONS_PROFILES=Profiles
 SING_OPTIONS_EXIT=Terug
 
 SING_OPTIONS_GAME_LANGUAGE=Taal
@@ -257,8 +258,8 @@ JUKEBOX_SONGOPTIONS_LYRIC_COLOR=Kleur
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
 
 OPTION_VALUE_TO_SING=Zing
- OPTION_VALUE_ACTUAL=Bovenste
-OPTION_VALUE_NEXT=Bodem
+OPTION_VALUE_TOP=Bovenste
+OPTION_VALUE_BOTTOM=Bodem
 ;TODO: OPTION_VALUE_OTHER=Other
 ;TODO: OPTION_VALUE_FILL=Fill
 ;TODO: OPTION_VALUE_OUTLINE=Outline
@@ -310,6 +311,7 @@ SING_SONG_SELECTION_LEGEND_DUET=Duet
 ;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
 ;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
 ;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
+;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Totaal
 SING_MODE=Zing solo
@@ -472,16 +474,16 @@ MODE_BLIND_NAME=Blinde Mode
 ;TODO: MODE_BLINDTOTAL_NAME=Total Darkness!
 ;TODO: MODE_BLINDTOTAL_DESC=A duel, but with the notes and the lyrics hidden. Only for the brave!
 
-MODE_1000BLIND_NAME = +1000 Blind
+MODE_1000BLIND_NAME= +1000 Blind
 ;TODO: MODE_1000BLIND_DESC = Gain a lead of more than 1000 points, but without seeing the notes!
 
-MODE_DEAF_NAME = Doof
+MODE_DEAF_NAME= Doof
 ;TODO: MODE_DEAF_DESC = Think you know the notes? Can you sing it without the acompaniment?
 
 ;TODO: MODE_BLINDLYRICS_NAME = No Lyrics
 ;TODO: MODE_BLINDLYRICS_DESC = Think you know all the lyrics? Sing with the lyrics hidden!
 
-MODE_500BLIND_NAME = +500 Blind
+MODE_500BLIND_NAME= +500 Blind
 ;TODO: MODE_500BLIND_DESC = Gain a lead of more than 500 points, but without seeing the notes!
 
 ;TODO: MODE_SHORTSONG_NAME = Short Song
