--- a/game/languages/Polski.ini
+++ b/game/languages/Polski.ini
@@ -49,6 +49,7 @@ SING_OPTIONS_MICROPHONES=Nagrywanie
 SING_OPTIONS_ADVANCED=Zaawansow.
 SING_OPTIONS_NETWORK=Internet
 SING_OPTIONS_WEBCAM=Kamerka
+;TODO: SING_OPTIONS_PROFILES=Profiles
 SING_OPTIONS_EXIT=Wstecz
 
 SING_OPTIONS_GAME_LANGUAGE=Język
@@ -224,10 +225,10 @@ SING_OPTIONS_WEBCAM_ID=Kamerka
 SING_OPTIONS_WEBCAM_RESOLUTION=Rozdzielczość
 SING_OPTIONS_WEBCAM_FPS=FPS
 SING_OPTIONS_WEBCAM_FLIP=Odwróć
-SING_OPTIONS_WEBCAM_EFFECT=Efekt
 SING_OPTIONS_WEBCAM_BRIGHTNESS=Jasność
 SING_OPTIONS_WEBCAM_SATURATION=Nasycenie
 SING_OPTIONS_WEBCAM_HUE=Odcień
+SING_OPTIONS_WEBCAM_EFFECT=Efekt
 SING_OPTIONS_WEBCAM_PREVIEW=Aktywuj podgląd
 
 SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Włącz podgląd
@@ -257,8 +258,8 @@ JUKEBOX_SONGOPTIONS_LYRIC=Opcje tekstu
 JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Pozycja
 
 OPTION_VALUE_TO_SING=Śpiewaj
-OPTION_VALUE_ACTUAL=Aktualne
-OPTION_VALUE_NEXT=Następne
+;TODO: OPTION_VALUE_TOP=Top
+;TODO: OPTION_VALUE_BOTTOM=Bottom
 OPTION_VALUE_OTHER=Inne
 OPTION_VALUE_FILL=Wypełnij
 OPTION_VALUE_OUTLINE=Zarys
@@ -310,6 +311,7 @@ SING_SONG_SELECTION_LEGEND_DUET=Duet
 ;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
 ;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
 ;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
+;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Cały
 SING_MODE=Śpiewaj solo
@@ -472,20 +474,20 @@ MODE_BLIND_DESC=Pojedynek 1v1, ale z ukrytymi nutami!
 ;TODO: MODE_BLINDTOTAL_NAME=Total Darkness!
 MODE_BLINDTOTAL_DESC=Pojedynek, ale z ukrytymi nutami i napisami. Tylko dla odważnych!
 
-MODE_1000BLIND_NAME = +1000 Ślepy
-MODE_1000BLIND_DESC = Uzbieraj ponad 1000 punktów, ale z ukrytymi nutami!
+MODE_1000BLIND_NAME= +1000 Ślepy
+MODE_1000BLIND_DESC= Uzbieraj ponad 1000 punktów, ale z ukrytymi nutami!
 
-MODE_DEAF_NAME = Głuchy
-MODE_DEAF_DESC = Myślisz że znasz nuty? Czy zaśpiewasz bez akompaniamentu?
+MODE_DEAF_NAME= Głuchy
+MODE_DEAF_DESC= Myślisz że znasz nuty? Czy zaśpiewasz bez akompaniamentu?
 
-MODE_BLINDLYRICS_NAME = Bez Napisów
-MODE_BLINDLYRICS_DESC = Myślisz że znasz tekst? Zaśpiewaj bez patrzenia na napisy!
+MODE_BLINDLYRICS_NAME= Bez Napisów
+MODE_BLINDLYRICS_DESC= Myślisz że znasz tekst? Zaśpiewaj bez patrzenia na napisy!
 
-MODE_500BLIND_NAME = +500 Ślepy
-MODE_500BLIND_DESC = Uzbieraj ponad 500 punktów, ale z ukrytymi nutami!
+MODE_500BLIND_NAME= +500 Ślepy
+MODE_500BLIND_DESC= Uzbieraj ponad 500 punktów, ale z ukrytymi nutami!
 
 ;TODO: MODE_SHORTSONG_NAME = Short Song
-MODE_SHORTSONG_DESC = Szybki pojedynek 1v1 do połowy piosenki!
+MODE_SHORTSONG_DESC= Szybki pojedynek 1v1 do połowy piosenki!
 
 ;TODO: MODE_HARDCORE_NAME=Hardcore
 MODE_HARDCORE_DESC=Bitwa o zdobycie trzy-liniowej przewagi nad przeciwnikiem!
