--- a/game/languages/Português.ini
+++ b/game/languages/Português.ini
@@ -49,6 +49,7 @@ SING_OPTIONS_MICROPHONES=Gravação
 SING_OPTIONS_ADVANCED=Avançado
 SING_OPTIONS_NETWORK=Network
 SING_OPTIONS_WEBCAM=Webcam
+;TODO: SING_OPTIONS_PROFILES=Profiles
 SING_OPTIONS_EXIT=Voltar
 
 SING_OPTIONS_GAME_LANGUAGE=Idioma
@@ -120,7 +121,7 @@ SING_OPTIONS_LYRICS_NOTELINES=Pauta
 
 OPTION_VALUE_PLAIN=Estilizado
 OPTION_VALUE_OLINE1=com borda fina
-;TODO: OPTION_VALUE_OLINE2=with thick edge
+;TODO: OPTION_VALUE_OLINE2=With thick edge
 
 OPTION_VALUE_SIMPLE=Simples
 OPTION_VALUE_ZOOM=Zoom
@@ -257,8 +258,8 @@ JUKEBOX_SONGOPTIONS_LYRIC=Opções de Letra
 JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Posição
 
 OPTION_VALUE_TO_SING=Cantar
-OPTION_VALUE_ACTUAL=Actual
-OPTION_VALUE_NEXT=Seguinte
+;TODO: OPTION_VALUE_TOP=Top
+;TODO: OPTION_VALUE_BOTTOM=Bottom
 OPTION_VALUE_OTHER=Outra
 OPTION_VALUE_FILL=Fundo
 OPTION_VALUE_OUTLINE=Contorno
@@ -310,6 +311,7 @@ SING_SONG_SELECTION_LEGEND_DUET=Dueto
 ;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
 ;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
 ;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
+;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Total
 SING_MODE=Cantar Solo
@@ -472,7 +474,7 @@ MODE_BLIND_NAME=Cego S/Notas
 ;TODO: MODE_BLINDTOTAL_NAME=Total Darkness!
 ;TODO: MODE_BLINDTOTAL_DESC=A duel, but with the notes and the lyrics hidden. Only for the brave!
 
-MODE_1000BLIND_NAME = +1000 Cego
+MODE_1000BLIND_NAME= +1000 Cego
 ;TODO: MODE_1000BLIND_DESC = Gain a lead of more than 1000 points, but without seeing the notes!
 
 ;TODO: MODE_DEAF_NAME = Deaf
@@ -481,10 +483,10 @@ MODE_1000BLIND_NAME = +1000 Cego
 ;TODO: MODE_BLINDLYRICS_NAME = No Lyrics
 ;TODO: MODE_BLINDLYRICS_DESC = Think you know all the lyrics? Sing with the lyrics hidden!
 
-MODE_500BLIND_NAME = +500 Cego
+MODE_500BLIND_NAME= +500 Cego
 ;TODO: MODE_500BLIND_DESC = Gain a lead of more than 500 points, but without seeing the notes!
 
-MODE_SHORTSONG_NAME = Canção Curta
+MODE_SHORTSONG_NAME= Canção Curta
 ;TODO: MODE_SHORTSONG_DESC = A fast-paced 1v1 duel over half the song!
 
 MODE_HARDCORE_NAME=Hardcore
