--- a/game/languages/Pу́сский.ini
+++ b/game/languages/Pу́сский.ini
@@ -49,6 +49,7 @@ SING_OPTIONS_MICROPHONES=запись
 SING_OPTIONS_ADVANCED=продвинутые
 SING_OPTIONS_NETWORK=интернет
 ;TODO: SING_OPTIONS_WEBCAM=Webcam
+;TODO: SING_OPTIONS_PROFILES=Profiles
 SING_OPTIONS_EXIT=назад
 
 SING_OPTIONS_GAME_LANGUAGE=Язык
@@ -257,8 +258,8 @@ JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Синий
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
 
 OPTION_VALUE_TO_SING=Пение
-OPTION_VALUE_ACTUAL=верхний
-OPTION_VALUE_NEXT=Дно
+OPTION_VALUE_TOP=верхний
+OPTION_VALUE_BOTTOM=Дно
 OPTION_VALUE_OTHER=Другие
 ;TODO: OPTION_VALUE_FILL=Fill
 ;TODO: OPTION_VALUE_OUTLINE=Outline
@@ -310,6 +311,7 @@ SING_SONG_SELECTION_LEGEND_DUET=Дуэт
 ;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
 ;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
 ;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
+;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=всего
 SING_MODE=пение соло
