--- a/game/languages/Slovenský.ini
+++ b/game/languages/Slovenský.ini
@@ -49,14 +49,14 @@ SING_OPTIONS_MICROPHONES=Mikrofón
 SING_OPTIONS_ADVANCED=Iné
 SING_OPTIONS_NETWORK=Internet
 SING_OPTIONS_WEBCAM=Webová kamera
+;TODO: SING_OPTIONS_PROFILES=Profiles
 SING_OPTIONS_EXIT=Späť
 
 SING_OPTIONS_GAME_LANGUAGE=Jazyk
 SING_OPTIONS_GAME_SONGMENU=Skladby
-;TODO: SING_OPTIONS_GAME_DUETS=Duets
+SING_OPTIONS_GAME_DUETS=Duety
 SING_OPTIONS_GAME_TABS=Kategórie
 SING_OPTIONS_GAME_SORTING=Triedenie
-SING_OPTIONS_GAME_DUETS=Duety
 SING_OPTIONS_GAME_SHOWSCORES=Zobraziť skóre
 SING_OPTIONS_GAME_JOYPAD_SUPPORT=Gamepad
 
@@ -156,7 +156,7 @@ SING_OPTIONS_NETWORK_USERNAME=Užívateľské meno
 SING_OPTIONS_NETWORK_PASSWORD=Heslo
 ;TODO: SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME=Send Name
 ;TODO: SING_OPTIONS_NETWORK_AUTO_MODE=Auto
-;TODO: SING_OPTIONS_NETWORK_AUTO_PLAYER=Prehrávač
+;TODO: SING_OPTIONS_NETWORK_AUTO_PLAYER=Player
 ;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_EASY=Auto-Send (Easy)
 ;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_MEDIUM=Auto-Send (Medium)
 ;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_HARD=Auto-Send (Hard)
@@ -254,9 +254,12 @@ JUKEBOX_SONGOPTIONS_LYRIC_RGB_RED=Červená
 JUKEBOX_SONGOPTIONS_LYRIC_RGB_GREEN=Zelená
 JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Modrá
 
+;TODO: JUKEBOX_SONGOPTIONS_LYRIC=Lyric Options
+;TODO: JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
+
 OPTION_VALUE_TO_SING=Spev
-OPTION_VALUE_ACTUAL=Aktuálny
-OPTION_VALUE_NEXT=Ďalší
+;TODO: OPTION_VALUE_TOP=Top
+;TODO: OPTION_VALUE_BOTTOM=Bottom
 OPTION_VALUE_OTHER=Ostatné
 OPTION_VALUE_FILL=Výplň
 OPTION_VALUE_OUTLINE=Obrysy
@@ -308,6 +311,7 @@ SING_SONG_SELECTION_LEGEND_DUET=Duet
 ;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
 ;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
 ;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
+;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Celkovo
 SING_MODE=Spievať sólo
@@ -470,20 +474,20 @@ MODE_BLIND_DESC=Duel bez zobrazenia nôt!
 MODE_BLINDTOTAL_NAME=Úplná tma!
 MODE_BLINDTOTAL_DESC=Duel so skrytými notami aj textom. Iba pre odvážnych!
 
-MODE_1000BLIND_NAME = +1000 naslepo
-MODE_1000BLIND_DESC = Získajte aspoň 1000bodový náskok, ale bez toho aby ste videli noty!
+MODE_1000BLIND_NAME= +1000 naslepo
+MODE_1000BLIND_DESC= Získajte aspoň 1000bodový náskok, ale bez toho aby ste videli noty!
 
-MODE_DEAF_NAME = Bez hudby
-MODE_DEAF_DESC = Myslíte si, že dokonale poznáte melódiu? Dokážete spievať bez podkladu?
+MODE_DEAF_NAME= Bez hudby
+MODE_DEAF_DESC= Myslíte si, že dokonale poznáte melódiu? Dokážete spievať bez podkladu?
 
-MODE_BLINDLYRICS_NAME = Bez textu
-MODE_BLINDLYRICS_DESC = Poznáte text pesničky? Tak spievajte bez neho!
+MODE_BLINDLYRICS_NAME= Bez textu
+MODE_BLINDLYRICS_DESC= Poznáte text pesničky? Tak spievajte bez neho!
 
-MODE_500BLIND_NAME = +500 naslepo
-MODE_500BLIND_DESC = Získajte aspoň 500bodový náskok, ale bez toho aby ste videli noty!
+MODE_500BLIND_NAME= +500 naslepo
+MODE_500BLIND_DESC= Získajte aspoň 500bodový náskok, ale bez toho aby ste videli noty!
 
-MODE_SHORTSONG_NAME = Krátka skladba
-MODE_SHORTSONG_DESC = Rýchly duel na polovici skladby!
+MODE_SHORTSONG_NAME= Krátka skladba
+MODE_SHORTSONG_DESC= Rýchly duel na polovici skladby!
 
 MODE_HARDCORE_NAME=Skúška ohňom
 MODE_HARDCORE_DESC=Súboj o trojriadkový náskok pred súperom!
