--- a/game/languages/Slovenščina.ini
+++ b/game/languages/Slovenščina.ini
@@ -49,6 +49,7 @@ SING_OPTIONS_MICROPHONES=Mikrofoni
 SING_OPTIONS_ADVANCED=Napredno
 SING_OPTIONS_NETWORK=Internet
 ;TODO: SING_OPTIONS_WEBCAM=Webcam
+;TODO: SING_OPTIONS_PROFILES=Profiles
 SING_OPTIONS_EXIT=Nazaj
 
 SING_OPTIONS_GAME_LANGUAGE=Jezik
@@ -257,8 +258,8 @@ JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Modra
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
 
 OPTION_VALUE_TO_SING=Poj
-OPTION_VALUE_ACTUAL=Zgornja
-OPTION_VALUE_NEXT=Spodnja
+OPTION_VALUE_TOP=Zgornja
+OPTION_VALUE_BOTTOM=Spodnja
 ;TODO: OPTION_VALUE_OTHER=Other
 ;TODO: OPTION_VALUE_FILL=Fill
 ;TODO: OPTION_VALUE_OUTLINE=Outline
@@ -299,8 +300,8 @@ SING_LEGEND_ESC=Nazaj
 SING_SONG_SELECTION=Izbira pesmi
 SING_SONG_SELECTION_MENU=Meni
 SING_SONG_SELECTION_PLAYLIST=Seznam predvajanja
-SING_SONGS_IN_CAT=Pesmi
 SING_SONG_IN_CAT=Pesem
+SING_SONGS_IN_CAT=Pesmi
 PLAYLIST_CATTEXT=Lista: %s
 SING_SONG_SELECTION_LEGEND_TITLE=Legenda
 SING_SONG_SELECTION_LEGEND_VIDEO=Video
@@ -310,6 +311,7 @@ SING_SONG_SELECTION_LEGEND_DUET=Duet
 ;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
 ;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
 ;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
+;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Skupaj
 SING_MODE=Petje
@@ -587,7 +589,7 @@ ABOUT_OVERVIEW=Odkrijte nov način petja, samega, v paru ali s prijatelji. \n Za
 DEVELOPERS_OVERVIEW=Ljudje, ki so prispevali k temu projektu:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Obiščite nas za več informacij.\n\nhttps://ultrastar-es.org
 
 ;TODO: SCREENSHOT_SAVED=Screenshot saved
-;TODO: SCREENSHOT_FAILED=Couldn''t save screenshot
+;TODO: SCREENSHOT_FAILED=Couldn't save screenshot
 
 MSG_ERROR_TITLE=Napaka
 ;TODO: MSG_INFO_TITLE=Information
