--- a/game/languages/Svenska.ini
+++ b/game/languages/Svenska.ini
@@ -49,6 +49,7 @@ SING_OPTIONS_MICROPHONES=Inspelning
 SING_OPTIONS_ADVANCED=Avancerat
 SING_OPTIONS_NETWORK=Internet
 ;TODO: SING_OPTIONS_WEBCAM=Webcam
+;TODO: SING_OPTIONS_PROFILES=Profiles
 SING_OPTIONS_EXIT=Tillbaka
 
 SING_OPTIONS_GAME_LANGUAGE=Språk
@@ -257,8 +258,8 @@ JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Blå
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
 
 OPTION_VALUE_TO_SING=Sjung
-OPTION_VALUE_ACTUAL=Övre
-OPTION_VALUE_NEXT=Botten
+OPTION_VALUE_TOP=Övre
+OPTION_VALUE_BOTTOM=Botten
 ;TODO: OPTION_VALUE_OTHER=Other
 ;TODO: OPTION_VALUE_FILL=Fill
 ;TODO: OPTION_VALUE_OUTLINE=Outline
@@ -270,8 +271,8 @@ OPTION_VALUE_VIOLET=Lila
 OPTION_VALUE_ORANGE=Orange
 OPTION_VALUE_YELLOW=Gul
 OPTION_VALUE_BROWN=Brun
-;TODO: OPTION_VALUE_MAGENTA=Magenta
 OPTION_VALUE_BLACK=Svart
+;TODO: OPTION_VALUE_MAGENTA=Magenta
 OPTION_VALUE_GRAY=Grå
 OPTION_VALUE_WHITE=Vit
 OPTION_VALUE_TURQUOISE=Turkos
@@ -310,6 +311,7 @@ SING_SONG_SELECTION_LEGEND_DUET=Duett
 ;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
 ;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
 ;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
+;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Totalt
 SING_MODE=Sjung solo
@@ -472,7 +474,7 @@ MODE_BLIND_NAME=Blindläge
 ;TODO: MODE_BLINDTOTAL_NAME=Total Darkness!
 ;TODO: MODE_BLINDTOTAL_DESC=A duel, but with the notes and the lyrics hidden. Only for the brave!
 
-MODE_1000BLIND_NAME = +1000 Blind
+MODE_1000BLIND_NAME= +1000 Blind
 ;TODO: MODE_1000BLIND_DESC = Gain a lead of more than 1000 points, but without seeing the notes!
 
 ;TODO: MODE_DEAF_NAME = Deaf
@@ -481,7 +483,7 @@ MODE_1000BLIND_NAME = +1000 Blind
 ;TODO: MODE_BLINDLYRICS_NAME = No Lyrics
 ;TODO: MODE_BLINDLYRICS_DESC = Think you know all the lyrics? Sing with the lyrics hidden!
 
-MODE_500BLIND_NAME = +500 Blind
+MODE_500BLIND_NAME= +500 Blind
 ;TODO: MODE_500BLIND_DESC = Gain a lead of more than 500 points, but without seeing the notes!
 
 ;TODO: MODE_SHORTSONG_NAME = Short Song
@@ -587,7 +589,7 @@ DEVELOPERS_TITLE=Utvecklad av
 DEVELOPERS_OVERVIEW=Personer som har bidragit till detta projekt:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Besök oss för mer information.\n\nhttps://ultrastar-es.org
 
 ;TODO: SCREENSHOT_SAVED=Screenshot saved
-;TODO: SCREENSHOT_FAILED=Couldn''t save screenshot
+;TODO: SCREENSHOT_FAILED=Couldn't save screenshot
 
 MSG_ERROR_TITLE=Fel
 ;TODO: MSG_INFO_TITLE=Information
