--- a/game/languages/Čeština.ini
+++ b/game/languages/Čeština.ini
@@ -49,6 +49,7 @@ SING_OPTIONS_MICROPHONES=Mikrofony
 SING_OPTIONS_ADVANCED=Pokročilé
 SING_OPTIONS_NETWORK=Internet
 ;TODO: SING_OPTIONS_WEBCAM=Webcam
+;TODO: SING_OPTIONS_PROFILES=Profiles
 SING_OPTIONS_EXIT=Zpět
 
 SING_OPTIONS_GAME_LANGUAGE=Jazyk
@@ -257,8 +258,8 @@ JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Modrá
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
 
 OPTION_VALUE_TO_SING=Zpívat
-OPTION_VALUE_ACTUAL=Horní
-OPTION_VALUE_NEXT=Dno
+OPTION_VALUE_TOP=Horní
+OPTION_VALUE_BOTTOM=Dno
 ;TODO: OPTION_VALUE_OTHER=Other
 ;TODO: OPTION_VALUE_FILL=Fill
 ;TODO: OPTION_VALUE_OUTLINE=Outline
@@ -310,6 +311,7 @@ SING_SONG_SELECTION_LEGEND_DUET=Duet
 ;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
 ;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
 ;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
+;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Celkem
 SING_MODE=Zpívat sólo
