--- a/game/languages/Ελληνικά.ini
+++ b/game/languages/Ελληνικά.ini
@@ -49,6 +49,7 @@ SING_OPTIONS_MICROPHONES=Ηχογράφηση
 SING_OPTIONS_ADVANCED=Για προχωρημένους
 SING_OPTIONS_NETWORK=Διαδίκτυο
 ;TODO: SING_OPTIONS_WEBCAM=Webcam
+;TODO: SING_OPTIONS_PROFILES=Profiles
 SING_OPTIONS_EXIT=Πίσω
 
 SING_OPTIONS_GAME_LANGUAGE=Γλώσσα
@@ -140,8 +141,8 @@ SING_OPTIONS_MICROPHONES_MIC_BOOST=Ισχύς μικροφώνου
 
 SING_OPTIONS_ADVANCED_DEBUG=Αποσυμφόρηση
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Οσκιλοσκόπιο
-SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Ερωτήσεις ασφαλείας
 SING_OPTIONS_ADVANCED_ONSONGCLICK=Μετά απο την επιλογή τραγουδιού
+SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Ερωτήσεις ασφαλείας
 SING_OPTIONS_ADVANCED_PARTYPOPUP=Αυτόματο μενού "Πάρτυ"
 ;TODO: SING_OPTIONS_ADVANCED_TOPSCORES=Top Scores
 ;TODO: SING_OPTIONS_ADVANCED_SINGSCORES=Scores on Singing
@@ -257,8 +258,8 @@ JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Μπλε
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
 
 OPTION_VALUE_TO_SING=Τραγουδήστε
-OPTION_VALUE_ACTUAL=Άνω
-OPTION_VALUE_NEXT=Κάτω μέρος
+OPTION_VALUE_TOP=Άνω
+OPTION_VALUE_BOTTOM=Κάτω μέρος
 ;TODO: OPTION_VALUE_OTHER=Other
 ;TODO: OPTION_VALUE_FILL=Fill
 ;TODO: OPTION_VALUE_OUTLINE=Outline
@@ -270,8 +271,8 @@ OPTION_VALUE_VIOLET=Βιολέτα
 OPTION_VALUE_ORANGE=Πορτοκάλι
 OPTION_VALUE_YELLOW=Κίτρινος
 OPTION_VALUE_BROWN=Καστανός
-;TODO: OPTION_VALUE_MAGENTA=Magenta
 OPTION_VALUE_BLACK=Μαύρος
+;TODO: OPTION_VALUE_MAGENTA=Magenta
 OPTION_VALUE_GRAY=Γκρί
 OPTION_VALUE_WHITE=άσπρο
 OPTION_VALUE_TURQUOISE=Τουρκουάζ
@@ -310,6 +311,7 @@ SING_SONG_SELECTION_LEGEND_DUET=Ντουέτο
 ;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
 ;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
 ;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
+;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Σύνολο
 SING_MODE=Τραγούδα σόλο
@@ -472,16 +474,16 @@ MODE_BLIND_NAME=Στα τυφλά
 ;TODO: MODE_BLINDTOTAL_NAME=Total Darkness!
 ;TODO: MODE_BLINDTOTAL_DESC=A duel, but with the notes and the lyrics hidden. Only for the brave!
 
-MODE_1000BLIND_NAME = +1000 Τυφλός
+MODE_1000BLIND_NAME= +1000 Τυφλός
 ;TODO: MODE_1000BLIND_DESC = Gain a lead of more than 1000 points, but without seeing the notes!
 
-MODE_DEAF_NAME = Κουφός
+MODE_DEAF_NAME= Κουφός
 ;TODO: MODE_DEAF_DESC = Think you know the notes? Can you sing it without the acompaniment?
 
 ;TODO: MODE_BLINDLYRICS_NAME = No Lyrics
 ;TODO: MODE_BLINDLYRICS_DESC = Think you know all the lyrics? Sing with the lyrics hidden!
 
-MODE_500BLIND_NAME = +500 Τυφλός
+MODE_500BLIND_NAME= +500 Τυφλός
 ;TODO: MODE_500BLIND_DESC = Gain a lead of more than 500 points, but without seeing the notes!
 
 ;TODO: MODE_SHORTSONG_NAME = Short Song
@@ -528,7 +530,6 @@ STAT_FORMAT_BANDS=%0:s \n %1:dx τραγουδήθηκαν
 ;TODO: PARTY_MODE_CHALLENGE=Challenge
 ;TODO: PARTY_MODE_TOURNAMENT=Tournament
 ;TODO: PARTY_MODE_JUKEBOX=Jukebox
-;TODO: PARTY_MODE_NOT_AVAILABLE=Not Available!
 
 ;TODO: PARTY_MODE_TOURNAMENT_PLAYER_DESC=Insert number and players name
 PARTY_MODE_TOURNAMENT_NUMBER_PLAYERS=Αριθμός παικτών
@@ -588,7 +589,7 @@ DEVELOPERS_TITLE=Αναπτύχθηκε από
 DEVELOPERS_OVERVIEW=Οι άνθρωποι που συνέβαλαν σε αυτό το έργο:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Επισκεφθείτε μας για περισσότερες πληροφορίες.\n\nhttps://ultrastar-es.org
 
 ;TODO: SCREENSHOT_SAVED=Screenshot saved
-;TODO: SCREENSHOT_FAILED=Couldn''t save screenshot
+;TODO: SCREENSHOT_FAILED=Couldn't save screenshot
 
 MSG_ERROR_TITLE=Σφάλμα
 ;TODO: MSG_INFO_TITLE=Information
