--- a/game/languages/Српски.ini
+++ b/game/languages/Српски.ini
@@ -49,6 +49,7 @@ SING_OPTIONS_MICROPHONES=Snimanje
 SING_OPTIONS_ADVANCED=Ostalo
 SING_OPTIONS_NETWORK=Интернет
 SING_OPTIONS_WEBCAM=Вебцам
+;TODO: SING_OPTIONS_PROFILES=Profiles
 SING_OPTIONS_EXIT=Nazad
 
 SING_OPTIONS_GAME_LANGUAGE=Jezik
@@ -257,8 +258,8 @@ JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Плави
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
 
 OPTION_VALUE_TO_SING=pevaj
-OPTION_VALUE_ACTUAL=горњи
-OPTION_VALUE_NEXT=Дно
+OPTION_VALUE_TOP=горњи
+OPTION_VALUE_BOTTOM=Дно
 ;TODO: OPTION_VALUE_OTHER=Other
 ;TODO: OPTION_VALUE_FILL=Fill
 ;TODO: OPTION_VALUE_OUTLINE=Outline
@@ -310,6 +311,7 @@ SING_SONG_SELECTION_LEGEND_DUET=Дует
 ;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
 ;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
 ;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
+;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Total
 SING_MODE=pevaj solo
@@ -400,7 +402,7 @@ PARTY_LEGEND_CONTINUE=Nastavi
 PARTY_OPTIONS_DESC=podesavanja za timsku igru
 PARTY_OPTIONS_WHEREAMI=Timske Opcije
 
-PARTY_PLAYER_DESC=Unesi imena igraca i timova!
+;TODO: PARTY_PLAYER_ENTER_NAME=Enter names
 
 PARTY_ROUNDS_LEGEND_CONTINUE=Zapocni timsku igru
 PARTY_ROUNDCOUNT=Број рунди
@@ -472,16 +474,16 @@ MODE_BLIND_NAME=Slepi Mod
 ;TODO: MODE_BLINDTOTAL_NAME=Total Darkness!
 ;TODO: MODE_BLINDTOTAL_DESC=A duel, but with the notes and the lyrics hidden. Only for the brave!
 
-MODE_1000BLIND_NAME = +1000 Слеп
+MODE_1000BLIND_NAME= +1000 Слеп
 ;TODO: MODE_1000BLIND_DESC = Gain a lead of more than 1000 points, but without seeing the notes!
 
-MODE_DEAF_NAME = Глуви
+MODE_DEAF_NAME= Глуви
 ;TODO: MODE_DEAF_DESC = Think you know the notes? Can you sing it without the acompaniment?
 
 ;TODO: MODE_BLINDLYRICS_NAME = No Lyrics
 ;TODO: MODE_BLINDLYRICS_DESC = Think you know all the lyrics? Sing with the lyrics hidden!
 
-MODE_500BLIND_NAME = +500 Слеп
+MODE_500BLIND_NAME= +500 Слеп
 ;TODO: MODE_500BLIND_DESC = Gain a lead of more than 500 points, but without seeing the notes!
 
 ;TODO: MODE_SHORTSONG_NAME = Short Song
@@ -587,7 +589,7 @@ DEVELOPERS_TITLE=Развијен од стране
 DEVELOPERS_OVERVIEW=Људи који су допринели овом пројекту:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Посетите нас за више информација.\n\nhttps://ultrastar-es.org
 
 ;TODO: SCREENSHOT_SAVED=Screenshot saved
-;TODO: SCREENSHOT_FAILED=Couldn''t save screenshot
+;TODO: SCREENSHOT_FAILED=Couldn't save screenshot
 
 MSG_ERROR_TITLE=Greska
 ;TODO: MSG_INFO_TITLE=Information
