--- a/game/languages/普通话.ini
+++ b/game/languages/普通话.ini
@@ -49,6 +49,7 @@ SING_OPTIONS_MICROPHONES=录音
 SING_OPTIONS_ADVANCED=高级
 ;TODO: SING_OPTIONS_NETWORK=Internet
 ;TODO: SING_OPTIONS_WEBCAM=Webcam
+;TODO: SING_OPTIONS_PROFILES=Profiles
 SING_OPTIONS_EXIT=返回
 
 SING_OPTIONS_GAME_LANGUAGE=语言
@@ -82,10 +83,10 @@ OPTION_VALUE_PLAYLIST=播放列表
 
 ;TODO: OPTION_VALUE_WHEN_EXISTS=When Exists
 
-SING_OPTIONS_GRAPHICS_RESOLUTION=分辨率
 SING_OPTIONS_GRAPHICS_FULLSCREEN=全屏
-SING_OPTIONS_GRAPHICS_EFFECTSING=演唱效果
+SING_OPTIONS_GRAPHICS_RESOLUTION=分辨率
 SING_OPTIONS_GRAPHICS_SCREENFADE=画面渐变
+SING_OPTIONS_GRAPHICS_EFFECTSING=演唱效果
 SING_OPTIONS_GRAPHICS_VISUALIZER=可视化
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=影片大小
 
@@ -118,9 +119,9 @@ SING_OPTIONS_LYRICS_FONT=字体
 SING_OPTIONS_LYRICS_EFFECT=效果
 SING_OPTIONS_LYRICS_NOTELINES=五线谱
 
-;TODO: OPTION_VALUE_PLAIN=stylized
-;TODO: OPTION_VALUE_OLINE1=with thin edge
-;TODO: OPTION_VALUE_OLINE2=with thick edge
+;TODO: OPTION_VALUE_PLAIN=Stylized
+;TODO: OPTION_VALUE_OLINE1=With thin edge
+;TODO: OPTION_VALUE_OLINE2=With thick edge
 
 OPTION_VALUE_SIMPLE=简单
 OPTION_VALUE_ZOOM=缩放
@@ -143,8 +144,8 @@ SING_OPTIONS_ADVANCED_OSCILLOSCOPE=示波器
 SING_OPTIONS_ADVANCED_ONSONGCLICK=选歌之后
 SING_OPTIONS_ADVANCED_ASKBEFOREDEL=安全问题
 SING_OPTIONS_ADVANCED_PARTYPOPUP=自动派对菜单
-;TODO: SING_OPTIONS_ADVANCED_SINGSCORES=Scores on Singing
 ;TODO: SING_OPTIONS_ADVANCED_TOPSCORES=Top Scores
+;TODO: SING_OPTIONS_ADVANCED_SINGSCORES=Scores on Singing
 
 OPTION_VALUE_ALL=所有
 ;TODO: OPTION_VALUE_PLAYER=Player
@@ -257,8 +258,8 @@ JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=蓝
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
 
 OPTION_VALUE_TO_SING=演唱
-;TODO: OPTION_VALUE_ACTUAL=Actual
-;TODO: OPTION_VALUE_NEXT=Next
+;TODO: OPTION_VALUE_TOP=Top
+;TODO: OPTION_VALUE_BOTTOM=Bottom
 ;TODO: OPTION_VALUE_OTHER=Other
 ;TODO: OPTION_VALUE_FILL=Fill
 ;TODO: OPTION_VALUE_OUTLINE=Outline
@@ -299,7 +300,7 @@ SING_LEGEND_ESC=返回
 SING_SONG_SELECTION=歌曲选择
 SING_SONG_SELECTION_MENU=菜单
 SING_SONG_SELECTION_PLAYLIST=播放列表
-;TODO: SING_SONGS_IN_CAT=Song
+;TODO: SING_SONG_IN_CAT=Song
 SING_SONGS_IN_CAT=歌曲
 PLAYLIST_CATTEXT=播放列表： %s
 ;TODO: SING_SONG_SELECTION_LEGEND_TITLE=Legend
@@ -310,6 +311,7 @@ PLAYLIST_CATTEXT=播放列表： %s
 ;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
 ;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
 ;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
+;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=全部
 SING_MODE=独唱
@@ -598,8 +600,6 @@ MSG_END_PARTY=确定离开派对模式？
 ERROR_NO_SONGS=未载入歌曲
 ERROR_NO_PLUGINS=未载入插件
 ;TODO: ERROR_LOADING_SONGS=Wait for loading all the songs
-ERROR_NO_MODES_FOR_CURRENT_SETUP=无适合当前玩家/团队设置的模式
-ERROR_CAN_NOT_START_PARTY=派对游戏初始化出现问题
 ERROR_CORRUPT_SONG=无法载入歌曲。
 ERROR_CORRUPT_SONG_FILE_NOT_FOUND=无法载入歌曲：文件未找到
 ERROR_CORRUPT_SONG_NO_NOTES=无法载入歌曲：找不到任何注释
