--- a/game/languages/Galego.ini
+++ b/game/languages/Galego.ini
@@ -49,6 +49,7 @@ SING_OPTIONS_MICROPHONES=Micrófonos
 SING_OPTIONS_ADVANCED=Avanzado
 SING_OPTIONS_NETWORK=Internet
 ;TODO: SING_OPTIONS_WEBCAM=Webcam
+;TODO: SING_OPTIONS_PROFILES=Profiles
 SING_OPTIONS_EXIT=Volta
 
 SING_OPTIONS_GAME_LANGUAGE=Idioma
@@ -63,7 +64,7 @@ OPTION_VALUE_ROULETTE=Roleta
 OPTION_VALUE_CHESSBOARD=Tabuleiro de xadrez
 OPTION_VALUE_CAROUSEL=Carrusel
 OPTION_VALUE_SLOT_MACHINE=Máquina tragamonedas
- OPTION_VALUE_LIST=Lista
+OPTION_VALUE_LIST=Lista
 ;TODO: OPTION_VALUE_MOSAIC=Tile
 
 OPTION_VALUE_ON=Si
@@ -257,8 +258,8 @@ JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Azul
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
 
 OPTION_VALUE_TO_SING=Cantar
-OPTION_VALUE_ACTUAL=Superior
-OPTION_VALUE_NEXT=Inferior
+OPTION_VALUE_TOP=Superior
+OPTION_VALUE_BOTTOM=Inferior
 OPTION_VALUE_OTHER=Outro
 ;TODO: OPTION_VALUE_FILL=Fill
 ;TODO: OPTION_VALUE_OUTLINE=Outline
@@ -310,6 +311,7 @@ SING_SONG_SELECTION_LEGEND_DUET=Dueto
 ;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
 ;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
 ;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
+;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Total
 SING_MODE=Só
@@ -472,7 +474,7 @@ MODE_BLIND_NAME=Modo a cegas
 ;TODO: MODE_BLINDTOTAL_NAME=Total Darkness!
 ;TODO: MODE_BLINDTOTAL_DESC=A duel, but with the notes and the lyrics hidden. Only for the brave!
 
-MODE_1000BLIND_NAME = +1000 Cego
+MODE_1000BLIND_NAME= +1000 Cego
 ;TODO: MODE_1000BLIND_DESC = Gain a lead of more than 1000 points, but without seeing the notes!
 
 ;TODO: MODE_DEAF_NAME = Deaf
@@ -481,10 +483,10 @@ MODE_1000BLIND_NAME = +1000 Cego
 ;TODO: MODE_BLINDLYRICS_NAME = No Lyrics
 ;TODO: MODE_BLINDLYRICS_DESC = Think you know all the lyrics? Sing with the lyrics hidden!
 
-MODE_500BLIND_NAME = +500 Cego
+MODE_500BLIND_NAME= +500 Cego
 ;TODO: MODE_500BLIND_DESC = Gain a lead of more than 500 points, but without seeing the notes!
 
-MODE_SHORTSONG_NAME = Canción curta
+MODE_SHORTSONG_NAME= Canción curta
 ;TODO: MODE_SHORTSONG_DESC = A fast-paced 1v1 duel over half the song!
 
 MODE_HARDCORE_NAME=Hardcore
@@ -574,8 +576,6 @@ NAME_PLAYERS_COUNT=Nº de xogadores
 NAME_CURRENT_PLAYER=Xogador
 
 ;TODO: JUKEBOX_MODE=Jukebox Mode
-;TODO: JUKEBOX_OPTIONS_DESC=Playlist Options
-;TODO: JUKEBOX_OPTIONS_WHEREAMI=Jukebox Options
 
 ABOUT_MAIN=Acerca de...
 ABOUT_USDX_DEVELOPEDBY=Desenvolvido por
