--- a/game/languages/Hrvatski.ini
+++ b/game/languages/Hrvatski.ini
@@ -49,10 +49,11 @@ SING_OPTIONS_MICROPHONES=Snimanje
 SING_OPTIONS_ADVANCED=Ostalo
 SING_OPTIONS_NETWORK=Internet
 ;TODO: SING_OPTIONS_WEBCAM=Webcam
+;TODO: SING_OPTIONS_PROFILES=Profiles
 SING_OPTIONS_EXIT=Natrag
 
-SING_OPTIONS_GAME_SONGMENU=Playliste
 SING_OPTIONS_GAME_LANGUAGE=Jezik
+SING_OPTIONS_GAME_SONGMENU=Playliste
 ;TODO: SING_OPTIONS_GAME_DUETS=Duets
 SING_OPTIONS_GAME_TABS=Tabovi
 SING_OPTIONS_GAME_SORTING=Sortiranje
@@ -85,9 +86,9 @@ OPTION_VALUE_PLAYLIST=Playliste
 SING_OPTIONS_GRAPHICS_FULLSCREEN=Cijeli ekran
 SING_OPTIONS_GRAPHICS_RESOLUTION=Rezolucija
 SING_OPTIONS_GRAPHICS_SCREENFADE=Fade-out ekrana
+SING_OPTIONS_GRAPHICS_EFFECTSING=Efekti kod pjevanja
 SING_OPTIONS_GRAPHICS_VISUALIZER=Vizualizacije
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=Veličina videa
-SING_OPTIONS_GRAPHICS_EFFECTSING=Efekti kod pjevanja
 
 OPTION_VALUE_BORDERLESS=Maksimizirati
 
@@ -257,8 +258,8 @@ JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Plava
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
 
 OPTION_VALUE_TO_SING=Pjevaj
-OPTION_VALUE_ACTUAL=Gornji
-;TODO: OPTION_VALUE_NEXT=Dno
+OPTION_VALUE_TOP=Gornji
+OPTION_VALUE_BOTTOM=Dno
 ;TODO: OPTION_VALUE_OTHER=Other
 ;TODO: OPTION_VALUE_FILL=Fill
 ;TODO: OPTION_VALUE_OUTLINE=Outline
@@ -310,6 +311,7 @@ SING_SONG_SELECTION_LEGEND_DUET=Duet
 ;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
 ;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
 ;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
+;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Ukupno
 SING_MODE=Pjevaj solo
@@ -587,7 +589,7 @@ DEVELOPERS_TITLE=Razvijen od
 DEVELOPERS_OVERVIEW=Ljudi koji su pridonijeli ovom projektu:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Posjetite nas za više informacija.\n\nhttps://ultrastar-es.org
 
 ;TODO: SCREENSHOT_SAVED=Screenshot saved
-;TODO: SCREENSHOT_FAILED=Couldn''t save screenshot
+;TODO: SCREENSHOT_FAILED=Couldn't save screenshot
 
 MSG_ERROR_TITLE=Greška
 ;TODO: MSG_INFO_TITLE=Information
