--- a/game/languages/Română.ini
+++ b/game/languages/Română.ini
@@ -49,6 +49,7 @@ SING_OPTIONS_MICROPHONES=Microfoane
 SING_OPTIONS_ADVANCED=Avansat
 SING_OPTIONS_NETWORK=Internet
 ;TODO: SING_OPTIONS_WEBCAM=Webcam
+;TODO: SING_OPTIONS_PROFILES=Profiles
 SING_OPTIONS_EXIT=Înapoi
 
 SING_OPTIONS_GAME_LANGUAGE=Limbă
@@ -257,8 +258,8 @@ JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Albastru
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
 
 ;TODO: OPTION_VALUE_TO_SING=Sing
-OPTION_VALUE_ACTUAL=Superior
-OPTION_VALUE_NEXT=Inferior
+OPTION_VALUE_TOP=Superior
+OPTION_VALUE_BOTTOM=Inferior
 ;TODO: OPTION_VALUE_OTHER=Other
 ;TODO: OPTION_VALUE_FILL=Fill
 ;TODO: OPTION_VALUE_OUTLINE=Outline
@@ -310,6 +311,7 @@ SING_SONG_SELECTION_LEGEND_DUET=Duet
 ;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
 ;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
 ;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
+;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Total
 SING_MODE=Cântă singur
