--- a/game/languages/Íslenska.ini
+++ b/game/languages/Íslenska.ini
@@ -49,6 +49,7 @@ SING_OPTIONS_MICROPHONES=Upptaka
 SING_OPTIONS_ADVANCED=Fleiri stillingar
 SING_OPTIONS_NETWORK=Internet
 ;TODO: SING_OPTIONS_WEBCAM=Webcam
+;TODO: SING_OPTIONS_PROFILES=Profiles
 SING_OPTIONS_EXIT=Til baka
 
 SING_OPTIONS_GAME_LANGUAGE=Tungumál
@@ -257,8 +258,8 @@ JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Blár
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
 
 OPTION_VALUE_TO_SING=Syngja
-OPTION_VALUE_ACTUAL=Efri
-OPTION_VALUE_NEXT=Neðst
+OPTION_VALUE_TOP=Efri
+OPTION_VALUE_BOTTOM=Neðst
 ;TODO: OPTION_VALUE_OTHER=Other
 ;TODO: OPTION_VALUE_FILL=Fill
 ;TODO: OPTION_VALUE_OUTLINE=Outline
@@ -310,6 +311,7 @@ PLAYLIST_CATTEXT=Lagalisti: %s
 ;TODO: SING_SONG_SELECTION_LEGEND_RAP=Rap
 ;TODO: SING_SONG_SELECTION_LEGEND_CREATEDBY=Created by
 ;TODO: SING_SONG_SELECTION_LEGEND_FIXEDBY=Fixed by
+;TODO: SING_SONG_SELECTION_LEGEND_INVALIDATED=Invalidated
 
 SING_TOTAL=Samtals
 SING_MODE=Syngja sóló
